# vcmp-latest-features-for-squirrel

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  console.c  console.cpp  console.h  console.hpp  functions.c  functions.cpp  main.c  main.cpp  main.h  main.hpp  sqhook.c  sqhook.cpp  sqhook.h  sqhook.hpp
src/include/: VCMP.h  utils.h  utils.hpp
src/plugin/: CMakeLists.txt  console.c  console.h  functions.c  main.c  main.h
src/squirrel/: credits.txt
